--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.68.1"
+    "react-native": "0.68.1",
+    "react-native-encrypted-storage": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
