--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.68.1",
-    "react-native-encrypted-storage": "^4.0.2"
+    "react-native-encrypted-storage": "^4.0.2",
+    "react-native-svg": "^12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -28,6 +29,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
   },
