--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,9 +44,9 @@ android {
 
     defaultConfig {
         applicationId "sh.cider.android"
+        minSdkVersion 21
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -67,4 +67,8 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.android.material:material:1.6.1'
+
+    // MusicKit
+    implementation fileTree(dir: "libs", include: ["*.jar", "*.aar"])
 }
