--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="sh.cider.android">
    <application
+        android:fullBackupContent="@xml/backup_rules"
         android:name="${applicationName}"
         android:label="@string/app_name"
         android:icon="@drawable/cider_menu"
