--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,6 +59,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    namespace 'sh.cider.android'
 }
 
 flutter {
@@ -68,6 +69,7 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.material:material:1.6.1'
+    implementation "androidx.media:media:1.6.0"
 
     // MusicKit
     implementation fileTree(dir: "libs", include: ["*.jar", "*.aar"])
